--- a/style.css
+++ b/style.css
@@ -868,6 +868,7 @@ button {
         background-color: hsl(300, 100%, 25%);
         height: 100vh;
         border: none;
+        width: 500px;
     }
 
     .about a {
